# memento

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: deployment.md  mcp.md
frontend/: components.json  index.html  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  textarea.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  DatasourceDetailPage.tsx  DatasourcesPage.tsx  IngestPage.tsx  QueryPage.tsx
frontend/src/routes/: __root.tsx  dashboard.tsx  datasource.$name.tsx  datasources.tsx  ingest.tsx  query.tsx
frontend/src/styles/: globals.css
memento/: __init__.py  __main__.py  agents.py  api.py  config.py  db.py  static.py  watcher.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_datasources.py  test_db.py  test_index.py  test_ingest.py  test_isolation.py  test_llm.py  test_manifest.py  test_pagination.py  test_source_file_dedup.py  test_static.py  test_structure.py  test_watcher.py
