[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-inbox-memory-layer"
version = "0.2.0"
description = "Curates inbox directories into AI-agent-optimized knowledge bases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.0.0",
    "watchdog>=4.0.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.10",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
inbox = "inbox.__main__:cli"

[tool.setuptools.packages.find]
include = ["inbox*"]
